# WFG

./: .gitignore  README.md  clearlog.ps1  pyproject.toml
docs/: doc.md
src/: main.py
src/SA/: design.md  flow.py
src/SA/core/: __init__.py  interfaces.py  models.py
src/SA/nodes/: __init__.py  api_analysis.py  api_extraction.py  context_extention.py  framework_analysis.py  project_analysis.py  summary_generation.py
src/SA/tools/: __init__.py  code_slicer.py  java_parser.py  project_detect.py
src/SA/tools/javaParser/: README.md  pom.xml
src/SA/tools/javaParser/src/main/java/SA/tool/: Main.java
src/SA/tools/javaParser/src/main/java/SA/tool/analyzer/: ApiExtractor.java  CallGraphAnalyzer.java  DefinitionFinder.java  ReferenceFinder.java  SymbolAnalyzer.java  SymbolIdGenerator.java
src/SA/tools/javaParser/src/main/java/SA/tool/model/: AnalysisMetadata.java  ApiInfo.java  (+8 more)
src/SA/tools/javaParser/src/test/java/SA/tool/: JavaParserIntegrationTest.java
src/SA/tools/javaParser/src/test/resources/: logging.properties
src/SA/tools/javaParser/src/test/resources/testapp/: call_graph.json
src/SA/tools/javaParser/src/testcode/java/: TestController.java
src/Util/config/: __init__.py  framework_config.py
src/Util/config/configs/knowledge/java/: springboot.json
src/Util/llm_api/: __init__.py  apis.py  testapi.py
src/Util/logger/: __init__.py  log_viewer.py  logger.py
src/Util/prompts/: prompt_config.py  prompt_craft.py
src/Util/prompts/APIAnalysis/: cn.json  input_format.json
src/Util/prompts/Java/: java.json
src/Util/prompts/SA/: cn.json
(+15 files in other folders)
